force-app/main/default/objects/DefaultReportNum__c/DefaultReportNum__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>デフォルト帳票番号</label>
</CustomObject>