force-app/main/default/objects/DefaultReportNum__c/fields/CancelCalculateNone__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateNone__c</fullName>
    <label>0円精算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>