force-app/main/default/objects/DefaultReportNum__c/fields/EstimateReminder__c.field-meta.xml
<CustomField>
    <fullName>EstimateReminder__c</fullName>
    <label>見積督促</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>