force-app/main/default/objects/DefaultReportNum__c/fields/InvoiceReceipt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceipt__c</fullName>
    <label>精算金送金案内</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>