force-app/main/default/objects/DefaultReportNum__c/fields/MediationRequest__c.field-meta.xml
<CustomField>
    <fullName>MediationRequest__c</fullName>
    <label>斡旋依頼</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>