force-app/main/default/objects/DefaultReportNum__c/fields/OtherDecisionContact__c.field-meta.xml
<CustomField>
    <fullName>OtherDecisionContact__c</fullName>
    <label>他決連絡</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>