force-app/main/default/objects/DefaultReportNum__c/fields/RefundBankGuide__c.field-meta.xml
<CustomField>
    <fullName>RefundBankGuide__c</fullName>
    <label>自動返金口座案内</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>